--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -11,4 +11,31 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-img src="../../../assets/images/libro.png" ></ion-img>
+
+
+  <form [formGroup]="loginForm" (ngSubmit)="login()" class="ion-padding">
+    <ion-item class="ion-margin">
+      <ion-label position="floating">E-Mail <ion-text color="danger">*</ion-text></ion-label>
+      <ion-input required formControlName="email" type="text"></ion-input>
+      <ion-icon slot="end" name="mail" class="ion-margin-top"></ion-icon>
+    </ion-item>
+    <ion-note color="danger" class="ion-margin-start" *ngIf="((this.loginForm.get('email').dirty || this.loginForm.get('email').touched) && this.loginForm.get('email').errors)">Email inválido</ion-note>
+
+    <ion-item class="ion-margin">
+      <ion-label position="floating">Password <ion-text color="danger">*</ion-text></ion-label>
+      <ion-input required formControlName="password" type="password" id="pwd"></ion-input>
+      <ion-icon slot="end" name="eye" class="ion-margin-top" (click)="verPwd($event)"></ion-icon>
+    </ion-item>
+    <ion-note color="danger" class="ion-margin-start" *ngIf="((this.loginForm.get('password').dirty || this.loginForm.get('password').touched) && this.loginForm.get('password').errors)">La contraseña debe tener al menos 6 caracteres</ion-note>
+
+    <ion-button expand="full" shape="round" color="primary" type="submit" [disabled]="loginForm.invalid" class="ion-margin">
+      login
+    </ion-button>
+  </form>
+
+  <div>
+    <p class="ion-margin-start">¿No tienes cuenta? <a [routerLink]="['/registro']">Regístrate ahora</a></p>
+  </div>
+
 </ion-content>
