--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -13,4 +13,37 @@
       <ion-title size="large">Registro</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <a href="#" class="btn btn-success">Prueba boton</a>
+
+  <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+    <ion-item class="ion-margin">
+      <ion-label position="floating">Nombre <ion-text color="danger">*</ion-text></ion-label>
+      <ion-input required formControlName="nombre" type="text"></ion-input>
+    </ion-item>
+    <ion-note color='danger' color='danger' class="ion-margin-start" *ngIf="((this.signUpForm.get('nombre').dirty || this.signUpForm.get('nombre').touched) && this.signUpForm.get('nombre').errors)">El campo nombre es obligatorio</ion-note>
+
+    <ion-item class="ion-margin">
+      <ion-label position="floating">Apellidos <ion-text color="danger">*</ion-text></ion-label>
+      <ion-input required formControlName="apellidos" type="text"></ion-input>
+    </ion-item>
+    <ion-note color='danger' class="ion-margin-start" *ngIf="((this.signUpForm.get('apellidos').dirty || this.signUpForm.get('apellidos').touched) && this.signUpForm.get('apellidos').errors)">El campo apellidos es obligatorio</ion-note>
+
+    <ion-item class="ion-margin">
+      <ion-label position="floating">Email <ion-text color="danger">*</ion-text></ion-label>
+      <ion-input required formControlName="email" type="email"></ion-input>
+    </ion-item>
+    <ion-note color='danger' class="ion-margin-start" *ngIf="((this.signUpForm.get('email').dirty || this.signUpForm.get('email').touched) && this.signUpForm.get('email').errors)">Email inválido</ion-note>
+
+    <ion-item class="ion-margin">
+      <ion-label position="floating">Password <ion-text color="danger">*</ion-text></ion-label>
+      <ion-input required formControlName="password" type="password" id="pwd"></ion-input>
+      <ion-icon slot="end" name="eye" class="ion-margin-top" (click)="verPwd($event)"></ion-icon>
+    </ion-item>
+    <ion-note color='danger' class="ion-margin-start" *ngIf="((this.signUpForm.get('password').dirty || this.signUpForm.get('password').touched) && this.signUpForm.get('password').errors)">La contraseña debe tener al menos 6 caracteres</ion-note>
+
+    <ion-button expand="full" shape="round" color="primary" type="submit" class="ion-margin" [disabled]="signUpForm.invalid">
+      Registrar
+    </ion-button>
+  </form>
 </ion-content>
