--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,6 +2,10 @@
   <ion-toolbar>
     <ion-title> Home </ion-title>
 
+    <ion-buttons slot="start">
+      <ion-menu-button menu="first"></ion-menu-button>
+    </ion-buttons>
+
     <ion-button slot="end" (click)="logout()" fill="clear">
       <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
     </ion-button>
