Registro modificado y logout tambien por error en las rutas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
         <ion-item>Menu Item</ion-item>
         <ion-item>Menu Item</ion-item>
         <ion-item>Menu Item</ion-item>
-        <ion-item>
+        <ion-item [routerLink]="['/perfil']">
           <ion-icon slot="start" name="person-outline"></ion-icon>
           Perfil
         </ion-item>
