--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Home </ion-title>
+    <ion-title>Tu Biblioteca</ion-title>
 
     <ion-buttons slot="start">
       <ion-menu-button menu="first"></ion-menu-button>
@@ -9,14 +9,35 @@
     <ion-button slot="end" (click)="logout()" fill="clear">
       <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
     </ion-button>
+    
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Home</ion-title>
+      <ion-title size="large">Tu Biblioteca</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <div *ngIf="libros.length === 0" class="ion-margin">
+    <ion-title>Aún no tienes libros en tu biblioteca</ion-title>
+  </div>
+
+  <div *ngIf="libros.length !== 0">
+    <ion-card *ngFor="let libro of libros" (click)="abrirLibro(libro)">
+      <ion-card-header>
+        <ion-card-title>{{libro.titulo}}</ion-card-title>
+        <ion-card-subtitle>{{libro.autor}}</ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+  </div>
+
+
+  <ion-fab vertical="bottom" horizontal="end" class="ion-margin">
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 
 </ion-content>
