Añadido el refresher al home sin funcionalidad

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -14,6 +14,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
+  <ion-content class="ion-padding">
+
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tu Biblioteca</ion-title>
@@ -39,5 +42,10 @@
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
+
+  <!-- <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content pullingIcon="chevron-down-circle-outline" refreshingSpinner="circles" refreshingText="Recargando...">
+    </ion-refresher-content>
+  </ion-refresher> -->
 
 </ion-content>
