En el home salen los libros en funcion del usuario

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -23,7 +23,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <div *ngIf="libros.length === 0" class="ion-margin">
+  <div *ngIf="libros.length === 0" class="ion-margin-vertical">
     <ion-title>Aún no tienes libros en tu biblioteca</ion-title>
   </div>
 
@@ -38,7 +38,7 @@
 
 
   <ion-fab vertical="bottom" horizontal="end" class="ion-margin">
-    <ion-fab-button>
+    <ion-fab-button (click)="anadirNota()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
