--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -36,8 +36,8 @@
 
     <ion-item class="ion-margin">
       <ion-label position="floating">Contraseña<ion-text color="danger">*</ion-text></ion-label>
-      <ion-input required formControlName="password" type="password" id="pwd"></ion-input>
-      <ion-icon slot="end" name="eye" class="ion-margin-top" (click)="verPwd($event)"></ion-icon>
+      <ion-input required formControlName="password" [type]="verContrasena?'text':'password'" id="pwd"></ion-input>
+      <ion-icon slot="end" [name]="verContrasena?'eye-off':'eye'" class="ion-margin-top" (click)="verPwd()"></ion-icon>
     </ion-item>
     <ion-note color='danger' class="ion-margin-start" *ngIf="((this.signUpForm.get('password').dirty || this.signUpForm.get('password').touched) && this.signUpForm.get('password').errors)">La contraseña debe tener al menos 6 caracteres</ion-note>
 
