cambios de vista y para poder ejecutar ionic android

--- a/src/app/pages/recuperar-pwd/recuperar-pwd.page.html
+++ b/src/app/pages/recuperar-pwd/recuperar-pwd.page.html
@@ -13,11 +13,16 @@
     <ion-toolbar>
       <ion-title size="large">Recuperar Contraseña</ion-title>
     </ion-toolbar>
+
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    
   </ion-header>
 
   <form [formGroup]="form" (ngSubmit)="submit()" class="ion-padding">
     <ion-item class="ion-margin">
-      <ion-label position="floating">E-Mail <ion-text color="danger">*</ion-text></ion-label>
+      <ion-label position="floating">Correo Electrónico <ion-text color="danger">*</ion-text></ion-label>
       <ion-input required formControlName="email" type="text"></ion-input>
       <ion-icon slot="end" name="mail" class="ion-margin-top"></ion-icon>
     </ion-item>
