--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -16,14 +16,14 @@
 
   <form [formGroup]="loginForm" (ngSubmit)="login()" class="ion-padding">
     <ion-item class="ion-margin">
-      <ion-label position="floating">E-Mail <ion-text color="danger">*</ion-text></ion-label>
+      <ion-label position="floating">Correo Electrónico <ion-text color="danger">*</ion-text></ion-label>
       <ion-input required formControlName="email" type="text"></ion-input>
       <ion-icon slot="end" name="mail" class="ion-margin-top"></ion-icon>
     </ion-item>
     <ion-note color="danger" class="ion-margin-start" *ngIf="((this.loginForm.get('email').dirty || this.loginForm.get('email').touched) && this.loginForm.get('email').errors)">Email inválido</ion-note>
 
     <ion-item class="ion-margin">
-      <ion-label position="floating">Password <ion-text color="danger">*</ion-text></ion-label>
+      <ion-label position="floating">Contraseña <ion-text color="danger">*</ion-text></ion-label>
       <ion-input required formControlName="password" [type]="this.verContrasena ? 'text' : 'password'" id="pwd"></ion-input>
       <ion-icon slot="end" [name]="this.verContrasena ? 'eye-off' : 'eye'" class="ion-margin-top" (click)="verPwd()"></ion-icon>
     </ion-item>
