cambio de menu en la aplicacion --> estilo twitter

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,3 +1,5 @@
+<app-menu></app-menu>
+
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Tu Biblioteca</ion-title>
@@ -6,19 +8,21 @@
       <ion-menu-button menu="first"></ion-menu-button>
     </ion-buttons>
 
-    <ion-button slot="end" (click)="logout()" fill="clear">
+    <ion-button slot="end" (click)="logout()" fill="clear" color="danger">
       <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
     </ion-button>
-
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-padding">
+<ion-content [fullscreen]="true" class="ion-padding" id="principal">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tu Biblioteca</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-searchbar [debounce]="700" (ionInput)="handleInput($event)" clearIcon="close-circle-outline" placeholder="Buscar Título" class="ion-margin-bottom"></ion-searchbar>
+
 
   <div *ngIf="libros.length !== 0; else elseBlock">
     <ion-card *ngFor="let libro of libros" (click)="abrirLibro(libro)">
