--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -3,9 +3,8 @@
     <ion-title>perfil</ion-title>
 
     <ion-buttons slot="start">
-      <ion-menu-button menu="first"></ion-menu-button>
+      <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
-    
   </ion-toolbar>
 </ion-header>
 
