--- a/src/app/pages/anadir-libro/anadir-libro.page.scss
+++ b/src/app/pages/anadir-libro/anadir-libro.page.scss
@@ -6,3 +6,15 @@ ion-item{
         font-size: larger;
     }
 }
+
+.image-icon{
+    font-size: 100px;
+    opacity: 30%;
+}
+
+ion-avatar{
+    width: 200px;
+    height: 160px;
+    --border-radius: 15px;
+    margin: 0 auto;
+}
