--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -1,17 +1,51 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>perfil</ion-title>
+    <ion-title>Perfil</ion-title>
 
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
+
+    <ion-icon slot="end" name="pencil-outline" (click)="habilitarEditar()" class="ion-margin-end" size="large"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">perfil</ion-title>
+      <ion-title size="large">Perfil</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <div *ngIf="this.usuario">
+    <ion-item class="ion-margin-vertical">
+      <ion-input label="Nombre" labelPlacement="floating" type="text" [(ngModel)]="this.usuario.nombre" disabled></ion-input>
+    </ion-item>
+
+    <ion-item class="ion-margin-vertical">
+      <ion-input label="Apellidos" labelPlacement="floating" type="text" [(ngModel)]="this.usuario.apellidos" disabled></ion-input>
+    </ion-item>
+
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col size="3"></ion-col>
+        <ion-col size="6">
+          <ion-button (click)="actualizarUsuario()" fill="solid" shape="round" color="success">
+            actualizar
+          </ion-button>
+        </ion-col>
+        <ion-col size="3"></ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-button (click)="cambiarPwd()" expand="full" fill="solid" color="warning" id="btnAct">
+      cambiar contraseña
+    </ion-button>
+
+    <ion-button (click)="cambiarPwd()" expand="full" fill="solid" id="btnDelete" color="danger">
+      borrar cuenta
+    </ion-button>
+    
+  </div>
+
 </ion-content>
