--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -21,16 +21,20 @@
     </ion-toolbar>
   </ion-header>
 
-  <!-- <ion-searchbar [debounce]="700" (ionInput)="handleInput($event)" clearIcon="close-circle-outline" placeholder="Buscar Título" class="ion-margin-bottom"></ion-searchbar> -->
+  <ion-searchbar [debounce]="700" (ionInput)="handleInput($event)" clearIcon="close-circle-outline" placeholder="Buscar Título" class="ion-margin-bottom"></ion-searchbar>
 
 
   <div *ngIf="libros.length !== 0; else elseBlock">
-    <ion-card *ngFor="let libro of libros" (click)="abrirLibro(libro)">
+    <ion-card *ngFor="let libro of libros" (click)="abrirLibro(libro)" mode="ios">
       <ion-img [src]="libro.imagen"></ion-img>
       <ion-card-header>
-        <ion-card-title>{{libro.titulo}}</ion-card-title>
         <ion-card-subtitle>{{libro.autor}}</ion-card-subtitle>
+        <ion-card-title>{{libro.titulo}}</ion-card-title>
       </ion-card-header>
+
+      <ion-card-content>
+        {{libro.comentario}}
+      </ion-card-content>
     </ion-card>
   </div>
   
