--- a/src/app/pages/anadir-libro/anadir-libro.page.html
+++ b/src/app/pages/anadir-libro/anadir-libro.page.html
@@ -1,8 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Añadir Libro</ion-title>
+    <ion-title>{{this.libro ? 'Detalles' : 'Añadir Libro'}}</ion-title>
 
-    <ion-buttons slot="start">
+
+    <ion-buttons slot="start" *ngIf="!this.libro">
       <ion-back-button [defaultHref]="'home'"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
@@ -11,7 +12,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Añadir Libro</ion-title>
+      <ion-title size="large">{{this.libro ? 'Detalles' : 'Añadir Libro'}}</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -48,7 +49,7 @@
 
     <ion-button expand="full" fill="solid" shape="round" type="submit" [disabled]="addBookForm.invalid"
       class="ion-margin">
-      Añadir
+      {{this.libro ? 'actualizar' : 'añadir'}}
     </ion-button>
   </form>
 
