--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -51,7 +51,7 @@
 
   </div>
   <ng-template #elseBlock1 class="ion-margin-vertical">
-    <ion-title>Aún no tienes libros en tu biblioteca</ion-title>
+    <ion-title>No tienes libros en tu biblioteca</ion-title>
   </ng-template>
 
 
