imagen de perfil del usuario y actualizar la imagen, menu cambiado

--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -1,3 +1,17 @@
 ion-menu::part(container) {
     border-radius: 0 20px 0 0;
 }
+
+ion-item{
+    font-size: 1.6rem;
+}
+
+ion-avatar{
+    width: 140px;
+    height: 140px;
+    margin: 0 auto;
+    margin-bottom: 25px;
+}
+.icono-vacio{
+    font-size: 120px;
+}
