--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -27,17 +27,29 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content>
-    <ion-menu-toggle>
-      <ion-item [routerLink]="['/home']">
+  <ion-content class="ion-text-center ion-padding-top">
+
+    <ion-avatar>
+      <img *ngIf="this.usuario?.imagen" [src]="this.usuario.imagen"/>
+      <ion-icon *ngIf="!this.usuario?.imagen" class="icono-vacio" name="person-circle-outline"></ion-icon>
+    </ion-avatar>
+
+    <ion-menu-toggle >
+      <ion-item [routerLink]="['/home']" button detail detailIcon="chevron-forward-circle-outline">
         <ion-icon slot="start" name="home-outline"></ion-icon>
-        Home
+        <ion-label>Home</ion-label>
       </ion-item>
-      <ion-item>Menu Item</ion-item>
-      <ion-item>Menu Item</ion-item>
-      <ion-item [routerLink]="['/perfil']">
+      <ion-item button detail detailIcon="chevron-forward-circle-outline">
+        <ion-icon slot="start" name="calendar-number-outline"></ion-icon>
+        <ion-label>Préstamos Pendientes</ion-label>
+      </ion-item>
+      <ion-item button detail detailIcon="chevron-forward-circle-outline">
+        <ion-icon slot="start" name="archive-outline"></ion-icon>
+        <ion-label>Historial Préstamos</ion-label>
+      </ion-item>
+      <ion-item [routerLink]="['/perfil']"  button detail detailIcon="chevron-forward-circle-outline">
         <ion-icon slot="start" name="person-outline"></ion-icon>
-        Perfil
+        <ion-label>Perfil</ion-label>
       </ion-item>
     </ion-menu-toggle>
   </ion-content>
