--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -6,46 +6,26 @@
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
 
-    <ion-icon slot="end" name="pencil-outline" (click)="habilitarEditar()" class="ion-margin-end" size="large"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-padding">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Perfil</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding ion-text-center">
 
-  <div *ngIf="this.usuario">
-    <ion-item class="ion-margin-vertical">
-      <ion-input label="Nombre" labelPlacement="floating" type="text" [(ngModel)]="this.usuario.nombre" disabled></ion-input>
-    </ion-item>
+  <ion-avatar>
+    <img *ngIf="this.usuario?.imagen" [src]="this.usuario.imagen" />
 
-    <ion-item class="ion-margin-vertical">
-      <ion-input label="Apellidos" labelPlacement="floating" type="text" [(ngModel)]="this.usuario.apellidos" disabled></ion-input>
-    </ion-item>
+    <ion-icon *ngIf="!this.usuario?.imagen" class="icono-vacio" name="person-circle-outline"></ion-icon>
+  </ion-avatar>
 
-    <ion-grid fixed>
-      <ion-row>
-        <ion-col size="3"></ion-col>
-        <ion-col size="6">
-          <ion-button (click)="actualizarUsuario()" fill="solid" shape="round" color="success">
-            actualizar
-          </ion-button>
-        </ion-col>
-        <ion-col size="3"></ion-col>
-      </ion-row>
-    </ion-grid>
+  <ion-button class="foto-btn" (click)="tomarAvatar()" mode="ios" size="small" shape="round">
+    <ion-icon name="camera-outline"></ion-icon>
+  </ion-button>
 
-    <ion-button (click)="cambiarPwd()" expand="full" fill="solid" color="warning" id="btnAct">
-      cambiar contraseña
-    </ion-button>
+  <h2>{{this.usuario?.nombre}}</h2>
+  <h3>{{this.usuario?.apellidos}}</h3>
 
-    <ion-button (click)="cambiarPwd()" expand="full" fill="solid" id="btnDelete" color="danger">
-      borrar cuenta
-    </ion-button>
-    
-  </div>
+  <ion-button (click)="cambiarPwd()" expand="block" shape="round" color="warning">
+    restablecer contraseña
+  </ion-button>
 
 </ion-content>
