añadido badge y cambio menu

--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -6,12 +6,12 @@ ion-item{
     font-size: 1.2rem;
 }
 
-ion-avatar{
-    width: 140px;
-    height: 140px;
-    margin: 0 auto;
-    margin-bottom: 25px;
-}
-.icono-vacio{
-    font-size: 120px;
-}
+// ion-avatar{
+//     width: 140px;
+//     height: 140px;
+//     margin: 0 auto;
+//     margin-bottom: 25px;
+// }
+// .icono-vacio{
+//     font-size: 120px;
+// }
