--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -27,14 +27,14 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content class="ion-text-center ion-padding-top">
+  <ion-content class="ion-text-center">
 
-    <ion-avatar>
-      <img *ngIf="this.usuario?.imagen" [src]="this.usuario.imagen"/>
+    <!-- <ion-avatar>
+      <img *ngIf="this.usuario?.imagen" [src]="this.usuario.imagen" />
       <ion-icon *ngIf="!this.usuario?.imagen" class="icono-vacio" name="person-circle-outline"></ion-icon>
-    </ion-avatar>
+    </ion-avatar> -->
 
-    <ion-menu-toggle >
+    <ion-menu-toggle>
       <ion-item [routerLink]="['/home']" button detail detailIcon="chevron-forward-circle-outline">
         <ion-icon slot="start" name="home-outline"></ion-icon>
         <ion-label>Home</ion-label>
@@ -47,10 +47,20 @@
         <ion-icon slot="start" name="archive-outline"></ion-icon>
         <ion-label>Historial Préstamos</ion-label>
       </ion-item>
-      <ion-item [routerLink]="['/perfil']"  button detail detailIcon="chevron-forward-circle-outline">
+      <ion-item [routerLink]="['/perfil']" button detail detailIcon="chevron-forward-circle-outline">
         <ion-icon slot="start" name="person-outline"></ion-icon>
         <ion-label>Perfil</ion-label>
       </ion-item>
     </ion-menu-toggle>
   </ion-content>
+
+  <ion-footer>
+    <ion-item>
+      <ion-avatar slot="start">
+        <img *ngIf="this.usuario?.imagen" [src]="this.usuario.imagen" />
+        <ion-icon *ngIf="!this.usuario?.imagen" name="person-circle-outline" size="large"></ion-icon>
+      </ion-avatar>
+      <ion-label>{{this.usuario?.nombre}} {{this.usuario?.apellidos}}</ion-label>
+    </ion-item>
+  </ion-footer>
 </ion-menu>
