--- a/src/app/pages/registro/registro.page.scss
+++ b/src/app/pages/registro/registro.page.scss
@@ -1,3 +1,15 @@
 ion-item{
     border-radius: 10px;
 }
+
+.image-icon{
+    font-size: 130px;
+    opacity: 30%;
+}
+
+ion-avatar{
+    width: 200px;
+    height: 200px;
+    --border-radius: 15px;
+    margin: 0 auto;
+}
