cambio color badge home

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -24,17 +24,17 @@
   <ion-segment value="todos" mode="ios" (ionChange)="segmentChanged($event)">
     <ion-segment-button value="todos">
       <ion-label>
-        Todos <ion-badge color="primary">{{this.libros.length || 0}}</ion-badge>
+        Todos <ion-badge color="tertiary" slot="end">{{this.libros.length || 0}}</ion-badge>
       </ion-label>
     </ion-segment-button>
     <ion-segment-button value="leidos">
       <ion-label>
-        Leídos <ion-badge color="primary">{{this.librosLeidos.length || 0}}</ion-badge>
+        Leídos <ion-badge color="tertiary" slot="end">{{this.librosLeidos.length || 0}}</ion-badge>
       </ion-label>
     </ion-segment-button>
     <ion-segment-button value="pendientes">
       <ion-label>
-        Pendientes<ion-badge color="primary">{{this.librosPendientes.length || 0}}</ion-badge>
+        Pendientes <ion-badge color="tertiary" slot="end">{{this.librosPendientes.length || 0}}</ion-badge>
       </ion-label>
     </ion-segment-button>
   </ion-segment>
