--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -39,11 +39,11 @@
         <ion-icon slot="start" name="home-outline"></ion-icon>
         <ion-label>Home</ion-label>
       </ion-item>
-      <ion-item button detail detailIcon="chevron-forward-circle-outline">
+      <ion-item [routerLink]="['/ver-prestamos-pendientes']" button detail detailIcon="chevron-forward-circle-outline">
         <ion-icon slot="start" name="calendar-number-outline"></ion-icon>
         <ion-label>Préstamos Pendientes</ion-label>
       </ion-item>
-      <ion-item button detail detailIcon="chevron-forward-circle-outline">
+      <ion-item [routerLink]="['/historial-prestamos']" button detail detailIcon="chevron-forward-circle-outline">
         <ion-icon slot="start" name="archive-outline"></ion-icon>
         <ion-label>Historial Préstamos</ion-label>
       </ion-item>
