--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -65,7 +65,7 @@
   <div *ngIf="this.segmentoElegido === 'leidos'">
     <div *ngIf="librosLeidos.length !== 0; else elseBlock2">
       <ion-card *ngFor="let libro of librosLeidos | filtro:tituloBuscado:'titulo'" (click)="abrirLibro(libro)" mode="ios">
-        <ion-img [src]="libro.imagen"></ion-img>
+        <ion-img [src]="libro.imagen ? libro.imagen : '../../../assets/images/no-imagen.png'"></ion-img>
         <ion-card-header>
           <ion-card-subtitle>{{libro.autor}}</ion-card-subtitle>
           <ion-card-title>{{libro.titulo}}</ion-card-title>
@@ -85,7 +85,7 @@
   <div *ngIf="this.segmentoElegido === 'pendientes'">
     <div *ngIf="librosPendientes.length !== 0; else elseBlock3">
       <ion-card *ngFor="let libro of librosPendientes | filtro:tituloBuscado:'titulo'" (click)="abrirLibro(libro)" mode="ios">
-        <ion-img [src]="libro.imagen"></ion-img>
+        <ion-img [src]="libro.imagen ? libro.imagen : '../../../assets/images/no-imagen.png'"></ion-img>
         <ion-card-header>
           <ion-card-subtitle>{{libro.autor}}</ion-card-subtitle>
           <ion-card-title>{{libro.titulo}}</ion-card-title>
