--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -41,7 +41,7 @@
       </ion-item>
       <ion-item [routerLink]="['/ver-prestamos-pendientes']" button detail detailIcon="chevron-forward-circle-outline">
         <ion-icon slot="start" name="calendar-number-outline"></ion-icon>
-        <ion-label>Préstamos Pendientes</ion-label>
+        <ion-label>Préstamos</ion-label>
       </ion-item>
       <ion-item [routerLink]="['/historial-prestamos']" button detail detailIcon="chevron-forward-circle-outline">
         <ion-icon slot="start" name="archive-outline"></ion-icon>
