--- a/src/app/pages/ver-prestamos-pendientes/ver-prestamos-pendientes.page.html
+++ b/src/app/pages/ver-prestamos-pendientes/ver-prestamos-pendientes.page.html
@@ -17,10 +17,28 @@
   </ion-header>
 
   <ion-list *ngIf="this.prestamos?.length !== 0">
-    <ion-item *ngFor="let p of prestamos">
+    <ion-list>
+      <ion-item-sliding *ngFor="let p of prestamos">
+        <ion-item>
+          <ion-label>{{p.fecha | date}}</ion-label>
+          <ion-label>{{p.titulo | uppercase}}</ion-label>
+          <ion-icon slot="end" name="code-outline"></ion-icon>
+        </ion-item>
+        <ion-item-options side="end">
+          <ion-item-option>edit</ion-item-option>
+          <ion-item-option color="danger">
+            <ion-icon name="trash-bin-outline" slot="icon-only"></ion-icon>
+          </ion-item-option>
+          <ion-item-option color="success">
+            <ion-icon slot="icon-only" name="checkmark-done-outline"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ion-list>
+    <!-- <ion-item *ngFor="let p of prestamos">
       <ion-label>{{p.fecha | date}}</ion-label>
       <ion-label>{{p.titulo | uppercase}}</ion-label>
-    </ion-item>
+    </ion-item> -->
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" class="ion-margin" slot="fixed">
