--- a/src/app/pages/ver-prestamos-pendientes/ver-prestamos-pendientes.page.html
+++ b/src/app/pages/ver-prestamos-pendientes/ver-prestamos-pendientes.page.html
@@ -9,37 +9,49 @@
 
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-text-wrap ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Préstamos</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <ion-list *ngIf="this.prestamos?.length !== 0">
-    <ion-list>
-      <ion-item-sliding *ngFor="let p of prestamos">
+  <ion-list *ngIf="this.prestamos?.length !== 0; else elseBlock">
+      <ion-item-sliding *ngFor="let p of prestamos" #devolver class="ion-margin-vertical">
         <ion-item>
+          <ion-thumbnail class="ion-margin-end">
+            <img src="../../../assets/images/prestamo.png"/>
+          </ion-thumbnail>
           <ion-label>{{p.fecha | date}}</ion-label>
-          <ion-label>{{p.titulo | uppercase}}</ion-label>
-          <ion-icon slot="end" name="code-outline"></ion-icon>
+          <ion-label class="ion-text-wrap">{{p.titulo | uppercase}}</ion-label>
         </ion-item>
-        <ion-item-options side="end">
-          <ion-item-option>edit</ion-item-option>
-          <ion-item-option color="danger">
-            <ion-icon name="trash-bin-outline" slot="icon-only"></ion-icon>
-          </ion-item-option>
+
+        <ion-item-options side="start" (ionSwipe)="marcarDevuelto()">
           <ion-item-option color="success">
             <ion-icon slot="icon-only" name="checkmark-done-outline"></ion-icon>
           </ion-item-option>
         </ion-item-options>
+
+        <ion-item-options side="end">
+          <ion-item-option>
+            <ion-icon name="pencil-outline" slot="icon-only"></ion-icon>
+          </ion-item-option>
+          <ion-item-option color="danger" (click)="confirmarEliminarPrestamo(p)">
+            <ion-icon name="trash-bin-outline" slot="icon-only"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
       </ion-item-sliding>
-    </ion-list>
-    <!-- <ion-item *ngFor="let p of prestamos">
-      <ion-label>{{p.fecha | date}}</ion-label>
-      <ion-label>{{p.titulo | uppercase}}</ion-label>
-    </ion-item> -->
   </ion-list>
+
+  <ng-template #elseBlock class="ion-margin-vertical">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>
+          No tienes ningún préstamos pendiente de devolución
+        </ion-card-title>
+      </ion-card-header>
+    </ion-card>
+  </ng-template>
 
   <ion-fab vertical="bottom" horizontal="end" class="ion-margin" slot="fixed">
     <ion-fab-button [routerLink]="['/anadir-actualizar-prestamo']" color="tertiary">
