--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -47,10 +47,10 @@
         <ion-img [src]="libro.imagen ? libro.imagen : '../../../assets/images/no-imagen.png'"></ion-img>
         <ion-card-header>
           <ion-card-subtitle>{{libro.autor}}</ion-card-subtitle>
-          <ion-card-title>{{libro.titulo}}</ion-card-title>
+          <ion-card-title>{{libro.titulo | uppercase}}</ion-card-title>
         </ion-card-header>
 
-        <ion-card-content>
+        <ion-card-content class="ion-text-justify">
           {{libro.comentario}}
         </ion-card-content>
       </ion-card>
